// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules/Item default 1`] = `
.c2 {
  display: inline-block;
  margin: 0.1em;
  box-sizing: border-box;
}

.c2 > svg {
  width: 100%;
  height: 100%;
}

.c1 svg,
.c1 div {
  width: 36px;
  height: 36px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  color: $gray-dark;
  min-height: 48px;
  background-color: #fff;
}

.c0 > * {
  margin: 2px;
}

.c0 > .c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<a
  className="c0"
  onClick={[Function]}
>
  <div
    className="c1"
  >
    <span
      className="c2"
      dangerouslySetInnerHTML={
        Object {
          "__html": Object {
            "default": "test-file-stub",
          },
        }
      }
    />
  </div>
  <div
    className="c3 "
  >
    Item
  </div>
</a>
`;

exports[`Storyshots Molecules/Item props onClick 1`] = `
.c2 {
  display: inline-block;
  margin: 0.1em;
  box-sizing: border-box;
}

.c2 > svg {
  width: 100%;
  height: 100%;
}

.c1 svg,
.c1 div {
  width: 36px;
  height: 36px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  color: $gray-dark;
  min-height: 48px;
  background-color: #fff;
}

.c0 > * {
  margin: 2px;
}

.c0 > .c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<a
  className="c0"
  onClick={[Function]}
>
  <div
    className="c1"
  >
    <span
      className="c2"
      dangerouslySetInnerHTML={
        Object {
          "__html": Object {
            "default": "test-file-stub",
          },
        }
      }
    />
  </div>
  <div
    className="c3 "
  >
    Item
  </div>
</a>
`;

exports[`Storyshots Molecules/Item props right 1`] = `
.c2 {
  display: inline-block;
  margin: 0.1em;
  box-sizing: border-box;
}

.c2 > svg {
  width: 100%;
  height: 100%;
}

.c1 svg,
.c1 div {
  width: 36px;
  height: 36px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  color: $gray-dark;
  min-height: 48px;
  background-color: #fff;
}

.c0 > * {
  margin: 2px;
}

.c0 > .c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<a
  className="c0"
  onClick={[Function]}
>
  <div
    className="c1"
  >
    <span
      className="c2"
      dangerouslySetInnerHTML={
        Object {
          "__html": Object {
            "default": "test-file-stub",
          },
        }
      }
    />
  </div>
  <div
    className="c3 "
  >
    Item
  </div>
  <div
    className=""
  >
    <p>
      Right
    </p>
  </div>
</a>
`;

exports[`Storyshots Molecules/Item props right is ArrowButton and onClick 1`] = `
.c5 {
  margin: 0;
  padding: 0;
  border: 0;
  background: none;
  font-size: 100%;
  vertical-align: baseline;
  font-family: inherit;
  font-weight: inherit;
  color: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c5:hover {
  cursor: pointer;
}

.c5:focus {
  outline: 0;
}

.c2 {
  display: inline-block;
  margin: 0.1em;
  box-sizing: border-box;
}

.c2 > svg {
  width: 100%;
  height: 100%;
}

.c4 {
  display: block;
  line-height: 0;
  -webkit-transform: scale(-1,1);
  -ms-transform: scale(-1,1);
  transform: scale(-1,1);
}

.c4 svg {
  width: 24px;
  height: 24px;
}

.c1 svg,
.c1 div {
  width: 36px;
  height: 36px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  color: $gray-dark;
  min-height: 48px;
  background-color: #fff;
}

.c0 > * {
  margin: 2px;
}

.c0 > .c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<a
  className="c0"
  onClick={[Function]}
>
  <div
    className="c1"
  >
    <span
      className="c2"
      dangerouslySetInnerHTML={
        Object {
          "__html": Object {
            "default": "test-file-stub",
          },
        }
      }
    />
  </div>
  <div
    className="c3 "
  >
    Item
  </div>
  <div
    className=""
  >
    <button
      className="c4 c5"
      onClick={[Function]}
    >
      <span
        className="c2"
        dangerouslySetInnerHTML={
          Object {
            "__html": Object {
              "default": "test-file-stub",
            },
          }
        }
      />
    </button>
  </div>
</a>
`;
